--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <title>Teq Home Automation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="#Teq" name="keywords">
+    <meta content="Teq" name="keywords">
     <meta content="We Deal with Solar and CCTV Installation" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+
+    <link href="img/1708766211031.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
