--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                <div class="container">
                   <h1 class="choose_taital">Why Choose Us</h1>
                   <p class="choose_text">We have a supreme team who works rigorously to grown businesses beyond client's expectations. We always deliver on time: We genuinely understand the value of time in business and hence adhere to time and deliver all projects on time to our customers.</p>
-                  <div class="read_bt_1"><a href="contact.html">Contact Us
+                  <div class="read_bt_1"><a href="contact.htm">Contact Us
                   </a></div>
                   
                </div>
